@@ -59,6 +59,16 @@ Keep all the default options and click <b>Next</b> until the file is extracted a
 </ol>
 </div>
 
+<div class="gtk-instructions">
+<h4>GTK</h4>
+Follow the instructions on the <a href="http://trac.webkit.org/wiki/BuildingGtk">BuildingGTK</a> wiki page.
+</div>
+
+<div class="qt-instructions">
+<h4>QT</h4>
+Follow the instructions on the <a href="http://trac.webkit.org/wiki/QtWebKit">QtWebKit</a> wiki page.
+</div>
+
 <p>Once you have installed your developer tools, the next step is
 <a href="checkout.html">getting the code</a>.</p>
 <?php
