@@ -1,3 +1,14 @@
+2009-12-04  Marc-Antoine Ruel  <maruel@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Add reference to the GTK and QT build wiki pages
+
+        https://bugs.webkit.org/show_bug.cgi?id=32088
+
+        * building/tools.html:
+        * css/main.css:
+
 2009-12-01  Chris Jerdonek  <chris.jerdonek@gmail.com>
 
         Reviewed by Darin Adler.
